# tg_bot

./: pyproject.toml
core/: main.py
core/weather_api/: api_call.py
